--- a/CheckYourEligibility-Admin/Views/Application/ApplicationDetailAppeal.cshtml
+++ b/CheckYourEligibility-Admin/Views/Application/ApplicationDetailAppeal.cshtml
@@ -1,64 +1,22 @@
-﻿@using System.Globalization
-@model CheckYourEligibility.Domain.Responses.ApplicationItemResponse;
-
-@{
-    Dictionary<string, string> statusColor = new Dictionary<string, string>
-    {
-        {"Entitled", "govuk-tag--green"},
-        {"EvidenceNeeded", "govuk-tag--light-blue"},
-        {"Receiving", "govuk-tag--pink"},
-        {"SentForReview", "govuk--tag-blue"},
-        {"ReviewedEntitled", "govuk--tag-green"},
-        {"ReviewedNotEntitled", "govuk--tag-red"}
-    };
-
-    Dictionary<string, string> statusName = new Dictionary<string, string>
-    {
-        {"Entitled", "Entitled"},
-        {"EvidenceNeeded", "Evidence Needed"},
-        {"Receiving", "Receiving Entitlement"},
-        {"SentForReview", "Sent for Review"},
-        {"ReviewedEntitled", "Reviewed Entitled"},
-        {"ReviewedNotEntitled", "Reviewed Not Entitled"}
-    };
-
-}
+﻿@using CheckYourEligibility_FrontEnd.ViewModels
+@model ApplicationDetailViewModel
 
 <main class="govuk-main-wrapper" id="main-content">
-
-
-
-
     <div class="govuk-grid-row govuk-!-margin-bottom-5">
         <div class="govuk-grid-column-full">
-
-
-
-
-
             <div class="moj-page-header-actions">
 
                 <div class="moj-page-header-actions__title">
-                    <h1 class="govuk-heading-xl">@Model.Data.ParentFirstName @Model.Data.ParentLastName</h1>
+                    <h1 class="govuk-heading-xl">@Model.ParentName</h1>
                 </div>
 
 
                 <div class="moj-page-header-actions__actions">
-
-
-                    <div class="moj-button-menu">
+                   <div class="moj-button-menu">
                         <div class="moj-button-menu__wrapper"></div>
                     </div>
-
-
                 </div>
-
-
             </div>
-
-
-
-
             <div class="govuk-width-container">
                 <div class="govuk-grid-row">
                     <div class="govuk-grid-column-full">
@@ -76,153 +34,7 @@
 
     </div>
 
-    <div class="govuk-summary-card">
-        <div class="govuk-summary-card__title-wrapper">
-
-            <h2 class="govuk-summary-card__title">
-                Child details Reference :- @Model.Data.Reference
-            </h2>
-
-
-
-            <div class="govuk-summary-card__actions">
-                <a class="govuk-link" href="#"><span class="govuk-visually-hidden"> of University of Gloucestershire (Parent or guardian details)</span></a>
-            </div>
-
-
-        </div>
-
-        <div class="govuk-summary-card__content">
-            <dl class="govuk-summary-list">
-
-
-                <div class="govuk-summary-list__row">
-                    <dt class="govuk-summary-list__key">
-                        Name
-                    </dt>
-                    <dd class="govuk-summary-list__value">
-                        @Model.Data.ChildFirstName @Model.Data.ChildLastName
-                    </dd>
-
-                </div>
-
-                <div class="govuk-summary-list__row">
-                    <dt class="govuk-summary-list__key">
-                        Date of birth
-                    </dt>
-                    <dd class="govuk-summary-list__value">
-                        @DateTime.ParseExact(Model.Data.ChildDateOfBirth, "yyyy-MM-dd", CultureInfo.InvariantCulture).ToString("dd MMMM yyyy")
-                    </dd>
-
-                </div>
-
-                <div class="govuk-summary-list__row">
-                    <dt class="govuk-summary-list__key">
-                        Status of application
-                    </dt>
-                    <dd class="govuk-summary-list__value">
-                        <strong class="govuk-tag @statusColor[Model.Data.Status]">
-                            @statusName[Model.Data.Status]
-                        </strong>
-                    </dd>
-                    <dd class="govuk-summary-list__value">
-                        @if (Model.Data.Status == "EvidenceNeeded")
-                        {
-                            @Html.ActionLink("Send for review", "ApplicationDetailAppealConfirmation", "application", new { id = Model.Data.Id }, new { @class = "govuk-button govuk-button--primary" })
-                        }
-                    </dd>
-
-                </div>
-
-            </dl>
-        </div>
-    </div>
-
-
-    <div class="govuk-!-padding-bottom-5"></div>
-
-    <div class="govuk-summary-card">
-        <div class="govuk-summary-card__title-wrapper">
-
-            <h2 class="govuk-summary-card__title">
-                Parent or guardian details
-            </h2>
-
-
-
-            <div class="govuk-summary-card__actions">
-                <a class="govuk-link" href="#"><span class="govuk-visually-hidden"> of University of Gloucestershire (Parent or guardian details)</span></a>
-            </div>
-
-
-        </div>
-
-        <div class="govuk-summary-card__content">
-            <dl class="govuk-summary-list">
-
-
-                <div class="govuk-summary-list__row">
-                    <dt class="govuk-summary-list__key">
-                        Name
-                    </dt>
-                    <dd class="govuk-summary-list__value">
-                        @Model.Data.ParentFirstName @Model.Data.ParentLastName
-                    </dd>
-
-                </div>
-
-                <div class="govuk-summary-list__row">
-                    <dt class="govuk-summary-list__key">
-                        Date of birth
-                    </dt>
-                    <dd class="govuk-summary-list__value">
-                        @DateTime.ParseExact(Model.Data.ParentDateOfBirth, "yyyy-MM-dd", CultureInfo.InvariantCulture).ToString("dd MMMM yyyy")
-                    </dd>
-
-                </div>
-
-
-
-                <div class="govuk-summary-list__row">
-                    @if(!string.IsNullOrEmpty(Model.Data.ParentNationalInsuranceNumber))
-                    {
-                        <dt class="govuk-summary-list__key">
-                            National Insurance number
-                        </dt>
-                        <dd class="govuk-summary-list__value">
-                            @Model.Data.ParentNationalInsuranceNumber
-                        </dd>
-
-                    }
-                    else
-                    {
-                        <dt class="govuk-summary-list__key">
-                            Asylum support reference number
-                        </dt>
-                        <dd class="govuk-summary-list__value">
-                            @Model.Data.ParentNationalAsylumSeekerServiceNumber
-                        </dd>
-
-                    }
-                   
-                </div>
-
-
-
-                <div class="govuk-summary-list__row">
-                    <dt class="govuk-summary-list__key">
-                        Email address
-                    </dt>
-                    <dd class="govuk-summary-list__value">
-                        @Model.Data.User.Email
-                    </dd>
-
-                </div>
-
-
-            </dl>
-        </div>
-    </div>
-
+    @Html.Partial("ApplicationDetailPartial", Model)
+ 
 </main>
 
