--- a/CheckYourEligibility-Admin/Views/Home/Index.cshtml
+++ b/CheckYourEligibility-Admin/Views/Home/Index.cshtml
@@ -88,7 +88,7 @@
                     <div class="dfe-card-container">
                         <div class="def-card">
                             <h2 class="govuk-heading-m">
-                                <a class="govuk-link govuk-link--no-visited-state dfe-card-link--header" href="applications">Pending applications</a>
+                                <a class="govuk-link govuk-link--no-visited-state dfe-card-link--header" href="@Url.Action("PendingApplications", "Application")">Finalise applications</a
                             </h2>
                             <p>
                                 Check entitlement for children not found in the system.
