--- a/CheckYourEligibility-Admin/Views/Application/ApplicationDetailPartial.cshtml
+++ b/CheckYourEligibility-Admin/Views/Application/ApplicationDetailPartial.cshtml
@@ -64,7 +64,8 @@
                 </dd>
 
             </div>
-
+            @if (Model.Status != "SentForReview")
+            {
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
                     Status of application
@@ -80,9 +81,9 @@
                         @Html.ActionLink("Send for review", "ApplicationDetailAppealConfirmation", "application", new { id = Model.Id }, new { @class = "govuk-button govuk-button--primary" })
                     }
                 </dd>
-
+                
             </div>
-
+}
         </dl>
     </div>
 </div>
