--- a/CheckYourEligibility-Admin/Views/Application/ApplicationDetail.cshtml
+++ b/CheckYourEligibility-Admin/Views/Application/ApplicationDetail.cshtml
@@ -24,6 +24,9 @@
 
 }
 
+<a class="govuk-back-link" href="/Back" onclick="history.back(); return false;">Back</a>
+@* <a class="govuk-back-link-nolink"></a> *@
+
 <main class="govuk-main-wrapper" id="main-content">
 
 
