--- a/CheckYourEligibility-Admin/Views/Application/Results.cshtml
+++ b/CheckYourEligibility-Admin/Views/Application/Results.cshtml
@@ -23,6 +23,8 @@
 
 }
 
+@* <a class="govuk-back-link" href="/Back" onclick="history.back(); return false;">Back</a>*@
+<a class="govuk-back-link-nolink"></a>
 
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
