--- a/CheckYourEligibility-Admin/Views/Application/Search.cshtml
+++ b/CheckYourEligibility-Admin/Views/Application/Search.cshtml
@@ -1,5 +1,8 @@
 @model CheckYourEligibility_FrontEnd.Models.ApplicationSearch;
 
+<a class="govuk-back-link" href="/Back" onclick="history.back(); return false;">Back</a>
+@* <a class="govuk-back-link-nolink"></a> *@
+
 <div class="govuk-grid-row">
 
     <div class="govuk-grid-column-full">
