--- a/CheckYourEligibility-Admin/Views/BulkUpload/BatchOutcome/Error_Data_Issue.cshtml
+++ b/CheckYourEligibility-Admin/Views/BulkUpload/BatchOutcome/Error_Data_Issue.cshtml
@@ -3,6 +3,9 @@
     ViewData["ServiceName"] = "Check a family's eligibility";
 }
 
+@* <a class="govuk-back-link" href="/Back" onclick="history.back(); return false;">Back</a> *@
+<a class="govuk-back-link-nolink"></a>
+
 <div class="govuk-error-summary" data-module="govuk-error-summary">
     <div role="alert">
         <h2 class="govuk-error-summary__title">
@@ -28,6 +31,6 @@
     </div>
 </div>
 <p class="govuk-body">Please make sure you’ve corrected the issues on these lines and upload the file again.</p>
-<p><a href="javascript:window.history.back()">Try again</a></p>
+<p><a href="/TryAgain" onclick="history.back(); return false;">Try again</a>></p>
 <p><a href="@Url.Action("Index", "Home")">Return to dashboard</a></p>
-<p><a href="#">Sign out</a></p>
+<p> @Html.ActionLink("Sign Out", "SignOut", "Account")</p>
