--- a/CheckYourEligibility-Admin/Views/BulkUpload/BatchOutcome/Success.cshtml
+++ b/CheckYourEligibility-Admin/Views/BulkUpload/BatchOutcome/Success.cshtml
@@ -1,4 +1,7 @@
-﻿<div class="govuk-notification-banner govuk-notification-banner--success" role="alert" aria-labelledby="govuk-notification-banner-title" data-module="govuk-notification-banner">
+﻿@* <a class="govuk-back-link" href="/Back" onclick="history.back(); return false;">Back</a> *@
+<a class="govuk-back-link-nolink"></a>
+
+<div class="govuk-notification-banner govuk-notification-banner--success" role="alert" aria-labelledby="govuk-notification-banner-title" data-module="govuk-notification-banner">
     <div class="govuk-notification-banner__header">
         <h2 class="govuk-notification-banner__title" id="govuk-notification-banner-title">
             Success
