--- a/CheckYourEligibility-Admin/Views/BulkUpload/Batch_Check.cshtml
+++ b/CheckYourEligibility-Admin/Views/BulkUpload/Batch_Check.cshtml
@@ -11,6 +11,9 @@
     <partial name="_ValidationSummary" model="ViewData.ModelState" />
 }
 
+<a class="govuk-back-link" href="/Back" onclick="history.back(); return false;">Back</a>
+@* <a class="govuk-back-link-nolink"></a> *@
+
 <form asp-controller="BulkUpload" asp-action="Batch_Check" method="post" enctype="multipart/form-data">
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
