--- a/CheckYourEligibility-Admin/Views/Check/Enter_Child_Details.cshtml
+++ b/CheckYourEligibility-Admin/Views/Check/Enter_Child_Details.cshtml
@@ -11,6 +11,9 @@
     <partial name="_ValidationSummary" model="ViewData.ModelState" />
 }
 
+@* <a class="govuk-back-link" href="/Back" onclick="history.back(); return false;">Back</a>*@
+<a class="govuk-back-link-nolink"></a>
+
 <h1 class="govuk-heading-l" tabindex="-1">
     Provide details of your children
 </h1>
