--- a/CheckYourEligibility-Admin/Views/Check/Outcome/LA.cshtml
+++ b/CheckYourEligibility-Admin/Views/Check/Outcome/LA.cshtml
@@ -1,4 +1,7 @@
-﻿<div class="govuk-grid-row">
+﻿@* <a class="govuk-back-link" href="/Back" onclick="history.back(); return false;">Back</a> *@
+<a class="govuk-back-link-nolink"></a>
+
+<div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
         <h1 class="govuk-heading-l">@TempData["OutcomeText"]</h1>
 
@@ -8,4 +11,5 @@
         </p>
         <p> @Html.ActionLink("Return to dashboard", "index", "home")</p>
         <p> @Html.ActionLink("Sign Out", "SignOut", "Account")</p>
+    </div>
 </div>
