--- a/CheckYourEligibility-Admin/Views/Check/Outcome/Not_Eligible.cshtml
+++ b/CheckYourEligibility-Admin/Views/Check/Outcome/Not_Eligible.cshtml
@@ -1,4 +1,7 @@
-﻿<div class="govuk-width-container">
+﻿@* <a class="govuk-back-link" href="/Back" onclick="history.back(); return false;">Back</a> *@
+<a class="govuk-back-link-nolink"></a>
+
+<div class="govuk-width-container">
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
             <p class="govuk-heading-l">@TempData["OutcomeText"]</p>
@@ -22,6 +25,9 @@
     </div>
 </div>
 
+@* <a class="govuk-back-link" href="/Back" onclick="history.back(); return false;">Back</a> *@
+<a class="govuk-back-link-nolink"></a>
+
 <div class="govuk-!-padding-bottom-3"></div>
 
 <form action="Enter_Child_Details" method="post" novalidate>
@@ -31,7 +37,6 @@
 </form>
 
 <div class="govuk-!-padding-bottom-2"></div>
-
 
 <p> @Html.ActionLink("Return to dashboard", "index", "home")</p>
 <p> @Html.ActionLink("Sign Out", "SignOut", "Account")</p>
