--- a/CheckYourEligibility-Admin/Views/Check/Outcome/Not_Found.cshtml
+++ b/CheckYourEligibility-Admin/Views/Check/Outcome/Not_Found.cshtml
@@ -1,9 +1,12 @@
-﻿<div class="govuk-grid-row">
+﻿@* <a class="govuk-back-link" href="/Back" onclick="history.back(); return false;">Back</a> *@
+<a class="govuk-back-link-nolink"></a>
+
+<div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
         <h1 class="govuk-heading-l">@TempData["OutcomeText"]</h1>
         <p>The personal information you entered doesn’t match the departmental records.  </p>
         <p>Please <a href="javascript:window.history.back()">try again</a>, ensuring you’ve entered the parent/guardian details accurately and in the correct format.</p>
-        <p><a href="">Return to dashboard</a></p>
-        <p><a href="">Sign out</a></p>
+        <p> @Html.ActionLink("Return to dashboard", "index", "home")</p>
+        <p> @Html.ActionLink("Sign Out", "SignOut", "Account")</p>
     </div>
 </div>
