--- a/CheckYourEligibility-Admin/Views/Check/Outcome/Not_Found_Pending.cshtml
+++ b/CheckYourEligibility-Admin/Views/Check/Outcome/Not_Found_Pending.cshtml
@@ -1,4 +1,7 @@
-﻿<div class="govuk-grid-row">
+﻿@* <a class="govuk-back-link" href="/Back" onclick="history.back(); return false;">Back</a> *@
+<a class="govuk-back-link-nolink"></a>
+
+<div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
         <h1 class="govuk-heading-l">>@TempData["laOutcome"]</h1>
         <p>It’s possible that the Universal Credit statements needed to perform the check aren’t currently available.</p>
@@ -7,7 +10,7 @@
         <p><strong>Important:</strong> Their annual net earned income must be no higher than £7,400.</p>
         <p>Any documents they provide must show their income and the date.</p>
         <p>This result could change in as little as 1 working day – so please keep re-checking for 4 to 6 weeks.</p>
-        <p><a href="">Return to dashboard</a></p>
-        <p><a href="">Sign out</a></p>
-    </<div>
+        <p> @Html.ActionLink("Return to dashboard", "index", "home")</p>
+        <p> @Html.ActionLink("Sign Out", "SignOut", "Account")</p>
+    </div>
 </div>
