--- a/CheckYourEligibility-Admin/Views/Check/Process_Appeals.cshtml
+++ b/CheckYourEligibility-Admin/Views/Check/Process_Appeals.cshtml
@@ -5,6 +5,9 @@
     ViewData["ServiceName"] = "Check a family's eligibility";
 }
 
+<a class="govuk-back-link" href="/Back" onclick="history.back(); return false;">Back</a>
+@* <a class="govuk-back-link-nolink"></a> *@
+
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
         <div class="moj-page-header-actions">
