--- a/CheckYourEligibility-Admin/Views/Home/Cookies.cshtml
+++ b/CheckYourEligibility-Admin/Views/Home/Cookies.cshtml
@@ -3,6 +3,9 @@
     ViewData["Title"] = "Cookies";
 }
 
+<a class="govuk-back-link" href="/Back" onclick="history.back(); return false;">Back</a>
+@* <a class="govuk-back-link-nolink"></a> *@
+
 <h1 class="govuk-heading-l govuk-!-margin-bottom-4">Cookies</h1>
 
 <p>The Check if a child can get free school meals service puts small files (known as ‘cookies’) onto your computer to collect information about how you browse the site. </p>
