--- a/CheckYourEligibility-Admin/Views/Home/Index.cshtml
+++ b/CheckYourEligibility-Admin/Views/Home/Index.cshtml
@@ -10,6 +10,9 @@
     <partial name="_ValidationSummary" model="ViewData.ModelState" />
 }
 
+@* <a class="govuk-back-link" href="/Back" onclick="history.back(); return false;">Back</a>*@
+<a class="govuk-back-link-nolink"></a>
+
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
         <h1 class="govuk-heading-l">
