--- a/CheckYourEligibility-Admin/Views/Home/Privacy.cshtml
+++ b/CheckYourEligibility-Admin/Views/Home/Privacy.cshtml
@@ -3,6 +3,9 @@
     ViewData["Title"] = "Privacy policy";
 }
 
+<a class="govuk-back-link" href="/Back" onclick="history.back(); return false;">Back</a>
+@* <a class="govuk-back-link-nolink"></a> *@
+
 <h1 class="govuk-heading-l">Privacy Notice</h1>
 <h2 class="govuk-heading-m">Who we are</h2>
 
