--- a/CheckYourEligibility-Admin/Views/LocalAuthority/Check/Application_Sent.cshtml
+++ b/CheckYourEligibility-Admin/Views/LocalAuthority/Check/Application_Sent.cshtml
@@ -11,6 +11,9 @@
     <partial name="_ValidationSummary" model="ViewData.ModelState" />
 }
 
+@* <a class="govuk-back-link" href="/Back" onclick="history.back(); return false;">Back</a> *@
+<a class="govuk-back-link-nolink"></a>
+
 <div class="moj-banner moj-banner--success" role="region" aria-label="Success">
 
     <svg class="moj-banner__icon" fill="currentColor" role="presentation" focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 25 25" height="25" width="25">
