--- a/CheckYourEligibility-Admin/Views/LocalAuthority/Check/Enter_Details.cshtml
+++ b/CheckYourEligibility-Admin/Views/LocalAuthority/Check/Enter_Details.cshtml
@@ -11,6 +11,9 @@
     <partial name="_ValidationSummary" model="ViewData.ModelState" />
 }
 
+<a class="govuk-back-link" href="/Back" onclick="history.back(); return false;">Back</a>
+@* <a class="govuk-back-link-nolink"></a> *@
+
 <h1 class="govuk-heading-l">Enter your details</h1>
 
 <form asp-controller="Check" asp-action="Enter_Details" method="post">
