--- a/CheckYourEligibility-Admin/Views/LocalAuthority/Check/Loader.cshtml
+++ b/CheckYourEligibility-Admin/Views/LocalAuthority/Check/Loader.cshtml
@@ -2,6 +2,10 @@
     ViewData["Title"] = "Checking Loader";
     ViewData["ServiceName"] = "Check a family's eligibility";
 }
+
+@* <a class="govuk-back-link" href="/Back" onclick="history.back(); return false;">Back</a> *@
+<a class="govuk-back-link-nolink"></a>
+
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
         <div class="flex-container">
