--- a/CheckYourEligibility-Admin/Views/LocalAuthority/Check/Nass.cshtml
+++ b/CheckYourEligibility-Admin/Views/LocalAuthority/Check/Nass.cshtml
@@ -16,6 +16,9 @@
     <partial name="_ValidationSummary" model="ViewData.ModelState" />
 }
 
+<a class="govuk-back-link" href="/Back" onclick="history.back(); return false;">Back</a>
+@* <a class="govuk-back-link-nolink"></a> *@
+
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
         <form asp-controller="Check" asp-action="Nass" method="post" novalidate>
