--- a/CheckYourEligibility-Admin/Views/LocalAuthority/Check/Outcome/Eligible.cshtml
+++ b/CheckYourEligibility-Admin/Views/LocalAuthority/Check/Outcome/Eligible.cshtml
@@ -1,4 +1,7 @@
-﻿<div class="govuk-grid-column-full">
+﻿@* <a class="govuk-back-link" href="/Back" onclick="history.back(); return false;">Back</a> *@
+<a class="govuk-back-link-nolink"></a>
+
+<div class="govuk-grid-column-full">
     <h1 class="govuk-heading-l">Your children are entitled to free school meals</h1>
 
     <h2 class="govuk-heading-m">What to do next</h2>
