--- a/CheckYourEligibility-Admin/Views/LocalAuthority/Check/Outcome/Not_Found_Pending.cshtml
+++ b/CheckYourEligibility-Admin/Views/LocalAuthority/Check/Outcome/Not_Found_Pending.cshtml
@@ -1,4 +1,7 @@
-﻿<div class="govuk-grid-column-full">
+﻿@* <a class="govuk-back-link" href="/Back" onclick="history.back(); return false;">Back</a> *@
+<a class="govuk-back-link-nolink"></a>
+
+<div class="govuk-grid-column-full">
     <h1 class="govuk-heading-l">We could not check your children’s entitlement to free school meals</h1>
     <p>It’s possible that the Universal Credit statements needed to perform the check aren’t currently available.  </p>
 
@@ -11,5 +14,5 @@
     <h3 class="govuk-heading-s">Further guidance </h3>
     <p>More in-depth information on supporting evidence can be found in the guidance notes for parents and guardians. </p>
 
-    <p><a href="javascript:window.history.back()">Try again</a></p>
+    <p><a href="/TryAgain" onclick="history.back(); return false;">Try again</a>></p>
 </div>
