--- a/CheckYourEligibility-Parent/Views/Check/Enter_Child_Details.cshtml
+++ b/CheckYourEligibility-Parent/Views/Check/Enter_Child_Details.cshtml
@@ -5,6 +5,9 @@
     ViewData["ServiceName"] = "Check a family's eligibility";
 }
 
+@* <a class="govuk-back-link" href="/Back" onclick="history.back(); return false;">Back</a> *@
+<a class="govuk-back-link-nolink"></a>
+
 @if (!ViewData.ModelState.IsValid)
 {
     ViewData["Title"] = "Error: Check Details";
