--- a/CheckYourEligibility-Parent/Views/Check/Nass.cshtml
+++ b/CheckYourEligibility-Parent/Views/Check/Nass.cshtml
@@ -10,6 +10,9 @@
     var parent = JsonConvert.DeserializeObject<Parent>(request);
 }
 
+<a class="govuk-back-link" href="/Back" onclick="history.back(); return false;">Back</a>
+@* <a class="govuk-back-link-nolink"></a> *@
+
 @if (!ViewData.ModelState.IsValid)
 {
     ViewData["Title"] = "Error: Nass Number";
