--- a/CheckYourEligibility-Parent/Views/Check/Outcome/Not_Eligible.cshtml
+++ b/CheckYourEligibility-Parent/Views/Check/Outcome/Not_Eligible.cshtml
@@ -1,4 +1,7 @@
-﻿<div class="govuk-grid-column-full">
+﻿@* <a class="govuk-back-link" href="/Back" onclick="history.back(); return false;">Back</a> *@
+<a class="govuk-back-link-nolink"></a>
+
+<div class="govuk-grid-column-full">
     <h1 class="govuk-heading-l">Your children may not be entitled to free school meals</h1>
     <p>From the information you’ve provided, we cannot confirm if your children are entitled to free school meals. </p>
 
