--- a/CheckYourEligibility-Parent/Views/Home/Accessibility.cshtml
+++ b/CheckYourEligibility-Parent/Views/Home/Accessibility.cshtml
@@ -2,6 +2,8 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
     ViewData["Title"] = "Accessibility";
 }
+<a class="govuk-back-link" href="/Back" onclick="history.back(); return false;">Back</a>
+@* <a class="govuk-back-link-nolink"></a> *@
 
 <h1 class="govuk-heading-l govuk-!-margin-bottom-4 govuk-!-margin-top-2">Accessibility statement</h1>
 
