--- a/CheckYourEligibility-Parent/Views/Home/Parental_Guidance.cshtml
+++ b/CheckYourEligibility-Parent/Views/Home/Parental_Guidance.cshtml
@@ -3,6 +3,9 @@
     ViewData["Title"] = "Parental Guidance";
 }
 
+<a class="govuk-back-link" href="/Back" onclick="history.back(); return false;">Back</a>
+@* <a class="govuk-back-link-nolink"></a> *@
+
 <h1 class="govuk-heading-l">Applying for free school meals - Guidance for parents and guardians</h1>
 <h2 class="govuk-heading-m">Who can get free school meals?</h2>
 
