--- a/CheckYourEligibility-Parent/Views/Home/fsm_print_version.cshtml
+++ b/CheckYourEligibility-Parent/Views/Home/fsm_print_version.cshtml
@@ -3,6 +3,9 @@
     ViewData["Title"] = "FSM Print Version";
 }
 
+<a class="govuk-back-link" href="/Back" onclick="history.back(); return false;">Back</a>
+@* <a class="govuk-back-link-nolink"></a> *@
+
 <div class="govuk-grid-row">
 
     <h1 class="govuk-heading-l govuk-!-margin-bottom-4 govuk-!-margin-top-2">Apply for free school meals with a form</h1>
