--- a/CheckYourEligibility-Admin/Views/Application/Process_Appeals.cshtml
+++ b/CheckYourEligibility-Admin/Views/Application/Process_Appeals.cshtml
@@ -1,6 +1,8 @@
 ﻿@using CheckYourEligibility_FrontEnd.ViewModels
 @model PeopleSelectionViewModel;
 
+<a class="govuk-back-link" href="/Back" onclick="history.back(); return false;">Back</a>
+@* <a class="govuk-back-link-nolink"></a> *@
 
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
