--- a/CheckYourEligibility-Admin/Views/Application/ApplicationDetailAppeal.cshtml
+++ b/CheckYourEligibility-Admin/Views/Application/ApplicationDetailAppeal.cshtml
@@ -1,6 +1,9 @@
 ﻿@using CheckYourEligibility_FrontEnd.ViewModels
 @model ApplicationDetailViewModel
 
+<a class="govuk-back-link" href="/Back" onclick="history.back(); return false;">Back</a>
+@* <a class="govuk-back-link-nolink"></a> *@
+
 <main class="govuk-main-wrapper" id="main-content">
     <div class="govuk-grid-row govuk-!-margin-bottom-5">
         <div class="govuk-grid-column-full">
