--- a/CheckYourEligibility-Admin/Views/Application/ApplicationDetailAppealConfirmation.cshtml
+++ b/CheckYourEligibility-Admin/Views/Application/ApplicationDetailAppealConfirmation.cshtml
@@ -1,4 +1,7 @@
-﻿<main class="govuk-main-wrapper" id="main-content">
+﻿@* <a class="govuk-back-link" href="/Back" onclick="history.back(); return false;">Back</a> *@
+<a class="govuk-back-link-nolink"></a>
+
+<main class="govuk-main-wrapper" id="main-content">
 
 
     <div class="govuk-width-container">
