--- a/CheckYourEligibility-Admin/Views/Application/ApproveConfirmation.cshtml
+++ b/CheckYourEligibility-Admin/Views/Application/ApproveConfirmation.cshtml
@@ -1,4 +1,6 @@
-﻿ 
+﻿@* <a class="govuk-back-link" href="/Back" onclick="history.back(); return false;">Back</a> *@
+<a class="govuk-back-link-nolink"></a>
+
 <main class="govuk-main-wrapper" id="main-content">
 
     <div class="govuk-width-container">
