--- a/CheckYourEligibility-Admin/Views/Application/FinaliseApplications.cshtml
+++ b/CheckYourEligibility-Admin/Views/Application/FinaliseApplications.cshtml
@@ -1,6 +1,8 @@
 ﻿@using CheckYourEligibility_FrontEnd.ViewModels
 @model PeopleSelectionViewModel;
 
+<a class="govuk-back-link" href="/Back" onclick="history.back(); return false;">Back</a>
+@* <a class="govuk-back-link-nolink"></a> *@
 
 <main class="govuk-main-wrapper" id="main-content">
 
