--- a/CheckYourEligibility-Admin/Views/Application/AppealsApplications.cshtml
+++ b/CheckYourEligibility-Admin/Views/Application/AppealsApplications.cshtml
@@ -9,7 +9,7 @@
         <div class="moj-page-header-actions">
 
             <div class="moj-page-header-actions__title">
-                <h1 class="govuk-heading-l">Process appeals (@Model.People.Count())</h1>
+                <h1 class="govuk-heading-l">Process appeals (@ViewBag.TotalRecords)</h1>
             </div>
         </div>
         <div class="govuk-width-container">
@@ -38,6 +38,8 @@
         <div class="govuk-grid-row">
 
             <div class="govuk-grid-column-full">
+                @if (Model.People != null && Model.People.Any())
+                {
                 <table class="govuk-table">
                     <thead class="govuk-table__head">
                         <tr class="govuk-table__row">
@@ -52,6 +54,36 @@
                     </thead>
                     @Html.EditorFor(model => model.People)
                 </table>
+
+                <nav class="govuk-pagination" role="navigation" aria-label="results navigation">
+                    <ul class="govuk-pagination__list">
+                        @if (ViewBag.CurrentPage > 1)
+                        {
+                            <li class="govuk-pagination__item">
+                                    <a class="govuk-link govuk-pagination__link" href="@Url.Action("AppealsApplications", new { PageNumber = ViewBag.CurrentPage - 1 })">Previous</a>
+                            </li>
+                        }
+
+                        @for (int i = 1; i <= ViewBag.TotalPages; i++)
+                        {
+                            <li class="govuk-pagination__item @(ViewBag.CurrentPage == i ? "govuk-pagination__item--current" : "")">
+                                    <a class="govuk-link govuk-pagination__link" href="@Url.Action("AppealsApplications", new { PageNumber = i })">@i</a>
+                            </li>
+                        }
+
+                        @if (ViewBag.CurrentPage < ViewBag.TotalPages)
+                        {
+                            <li class="govuk-pagination__item">
+                                    <a class="govuk-link govuk-pagination__link" href="@Url.Action("AppealsApplications", new { PageNumber = ViewBag.CurrentPage + 1 })">Next</a>
+                            </li>
+                        }
+                    </ul>
+                </nav>
+                }
+                else
+                {
+                <p>No results found.</p>
+                }
             </div>
         </div>
     </div>
