--- a/CheckYourEligibility-Admin/Views/Application/EvidenceGuidance.cshtml
+++ b/CheckYourEligibility-Admin/Views/Application/EvidenceGuidance.cshtml
@@ -21,7 +21,7 @@
         <h2 class="govuk-heading-m">Parents or guardians who wish to appeal </h2>
         <p class="govuk-body">You will need to support local authority review of parents or guardians who:  </p>
         <ul class="govuk-list govuk-list--bullet">
-                <li>are listed in the @Html.ActionLink("‘Process appeals’ (opens in a new tab)", "Process_Appeals", "application", null, new { @class = "govuk-link ", target = "_blank" }) table with the status ‘Evidence needed’</li>
+                <li>are listed in the @Html.ActionLink("‘Process appeals’ (opens in a new tab)", "", "application", null, new { @class = "govuk-link ", target = "_blank" }) table with the status ‘Evidence needed’</li>
             <li>generate the result ‘the children of this parent or guardian may not be entitled to free school meals’ when checked </li>
         </ul>
         <p class="govuk-body">A <strong>‘may not be entitled’</strong> outcome for the free school meal check does not automatically mean the children in question can’t get free school meals.</p>
