--- a/CheckYourEligibility-Admin/Views/Application/Search.cshtml
+++ b/CheckYourEligibility-Admin/Views/Application/Search.cshtml
@@ -28,7 +28,7 @@
 
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
-    <form asp-controller="Application" asp-action="Results" method="post" class="form">
+    <form asp-controller="Application" asp-action="SearchResults" method="post" class="form">
 
 
         <!-- SEARCH BAR -->
