--- a/CheckYourEligibility-Admin/Views/Home/Index.cshtml
+++ b/CheckYourEligibility-Admin/Views/Home/Index.cshtml
@@ -42,7 +42,7 @@
                     <div class="dfe-card-container">
                         <div class="def-card">
                             <h2 class="govuk-heading-m">
-                                <a class="govuk-link govuk-link--no-visited-state dfe-card-link--header" href="@Url.Action("Process_Appeals", "Application")">Process appeals</a>
+                                <a class="govuk-link govuk-link--no-visited-state dfe-card-link--header" href="@Url.Action("AppealsApplications", "Application",new { PageNumber = 0 })">Process appeals</a>
                             </h2>
                             <p>Check the status of applications being appealed, and declare those ready for local authority review.</p>
                         </div>
@@ -50,7 +50,7 @@
                     <div class="dfe-card-container">
                         <div class="def-card">
                             <h2 class="govuk-heading-m">
-                                    <a class="govuk-link govuk-link--no-visited-state dfe-card-link--header" href="@Url.Action("FinaliseApplications", "Application")">Finalise applications</a>
+                                    <a class="govuk-link govuk-link--no-visited-state dfe-card-link--header" href="@Url.Action("FinaliseApplications", "Application",new { PageNumber = 0 })">Finalise applications</a>
                             </h2>
                             <p>Finalise applications for free school meals.</p>
                         </div>
@@ -91,7 +91,7 @@
                     <div class="dfe-card-container">
                         <div class="def-card">
                             <h2 class="govuk-heading-m">
-                                <a class="govuk-link govuk-link--no-visited-state dfe-card-link--header" href="@Url.Action("PendingApplications", "Application")">Pending applications</a
+                                <a class="govuk-link govuk-link--no-visited-state dfe-card-link--header" href="@Url.Action("PendingApplications", "Application",new { PageNumber = 0 })">Pending applications</a
                             </h2>
                             <p>
                                 Check entitlement for children not found in the system.
