--- a/CheckYourEligibility-Parent/Views/Check/Enter_Child_Details.cshtml
+++ b/CheckYourEligibility-Parent/Views/Check/Enter_Child_Details.cshtml
@@ -21,6 +21,8 @@
 <p>Include all your children who are in compulsory education. You can use the add another option, if you have more than one child.</p>
 
 <form asp-controller="Check" asp-action="Enter_Child_Details" method="post" novalidate>
+   <input type="hidden" id="ChildIndex"value="@Model.ChildIndex" />
+
     @for (int i = 0; i < Model.ChildList.Count; i++)
     {
         <div id="childNumber@(@i)">
