Alteration of option value in search to match model

--- a/CheckYourEligibility-Admin/Views/Application/Search.cshtml
+++ b/CheckYourEligibility-Admin/Views/Application/Search.cshtml
@@ -111,11 +111,11 @@
 
                                     <option value="SentForReview">Sent for review</option>
                                       
-                                    <option value="ReviewEntitled">Reviewed entitled</option>
+                                    <option value="ReviewedEntitled">Reviewed entitled</option>
 
                                     <option value="ReviewedNotEntitled">Reviewed not entitled</option>
                                         
-                                    <option value="ReceivingEntitlement">Receiving entitlement</option>
+                                    <option value="Receiving">Receiving entitlement</option>
 
 
                                 </select>
